--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ SECRET_REFRESH_KEY = secret_refresh_key
 
 
 
-NO_REPLAY_EMAIL=saturchak71@gmail.com
-NO_REPLAY_EMAIL_PASSWORD=Saturchak2151
+NO_REPLAY_EMAIL=****
+NO_REPLAY_EMAIL_PASSWORD=**
